Alignment problem fixed on main page

--- a/client/web/src/app/index.less
+++ b/client/web/src/app/index.less
@@ -206,5 +206,35 @@ body {
   animation-name: slideOutUp;
 }
 
+.arch-navbar a.md-button.md-default-theme,
+.arch-navbar .md-button.md-default-theme {
+  border-radius: 0;
+}
 
+
+.arch-navbar {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  //padding-left: 60px;
+  background: rgb(250,250,250);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  //height: 43px;
+}
+
+.arch-navbar {
+  .md-button {
+    line-height: 40px;
+    margin: 0;
+    border-radius: 0;
+  }
+}
+
+.arch-navbar md-autocomplete {
+  box-shadow: none;
+}
+
+.arch-navbar-text {
+  line-height: 40px;
+}
 
